Fix for usercard misaligning when zoomed out

--- a/theme/rdnshiny/css/display.css
+++ b/theme/rdnshiny/css/display.css
@@ -201,7 +201,7 @@ margin-left: 2px;
 
 #user_info_card a {color: #123}
 
-#user_info_card p {font-weight: bold; font-size: 13pt; margin-bottom: 8px; width: 322px; overflow: hidden; white-space: nowrap}
+#user_info_card p {font-weight: bold; font-size: 13pt; margin-bottom: 8px; width: 321px; overflow: hidden; white-space: nowrap}
 
 #user_info_card > ul {
 width: auto;
